// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createComposeObjFromRunners should create composeObj from all initialized runners 1`] = `
Object {
  "services": Object {
    "general": Object {
      "image": "general/image:123",
      "ports": Array [],
    },
    "kafka": Object {
      "depends_on": Array [
        "zookeeper",
      ],
      "environment": Object {
        "KAFKA_ADVERTISED_LISTENERS": "PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092",
        "KAFKA_AUTO_CREATE_TOPICS_ENABLE": "true",
        "KAFKA_BROKER_ID": 1,
        "KAFKA_LISTENER_SECURITY_PROTOCOL_MAP": "PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT",
        "KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR": 1,
        "KAFKA_ZOOKEEPER_CONNECT": "zookeeper:2181",
      },
      "image": "kafka/image:123",
      "ports": Array [
        "9092:9092",
      ],
    },
    "postgres": Object {
      "environment": Object {
        "POSTGRES_DB": "_",
        "POSTGRES_PASSWORD": "_",
        "POSTGRES_USER": "_",
      },
      "image": "postgres/image:123",
      "ports": Array [
        "5432:5432",
      ],
    },
    "redis": Object {
      "image": "redis/image:123",
      "ports": Array [
        "6379:6379",
      ],
    },
    "zookeeper": Object {
      "environment": Object {
        "ZOOKEEPER_CLIENT_PORT": "2181",
      },
      "image": "zookeeper/image:123",
      "ports": Array [
        "2181:2181",
      ],
    },
  },
  "version": "3",
}
`;

exports[`createComposeObjFromRunners should create composeObj from single runner 1`] = `
Object {
  "services": Object {
    "postgres": Object {
      "environment": Object {
        "POSTGRES_DB": "_",
        "POSTGRES_PASSWORD": "_",
        "POSTGRES_USER": "_",
      },
      "image": "postgres/image:123",
      "ports": Array [
        "5432:5432",
      ],
    },
  },
  "version": "3",
}
`;
